--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -3,11 +3,14 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns = "http://www.w3.org/1999/xhtml"   
-   xmlns:ui = "http://java.sun.com/jsf/facelets"
-   xmlns:h="http://java.sun.com/jsf/html"
-   xmlns:f="http://java.sun.com/jsf/core"
-   xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+   xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
    
+
+
 
    
    <body>
@@ -15,8 +18,53 @@
         <nav>
         <div class="nav-wrapper navigation">
           <a href="#" class="brand-logo">PumAsk</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a class="waves-effect waves-light btn">Iniciar Sesión</a></li>
+          <ul id="nav-mobile" class="right hide-on-med-and-down"> 
+            
+            
+          <c:choose>
+            <c:when test="#{usuarioBean.logged}">
+            <li>
+            <a class="waves-effect waves-light btn">#{usuarioBean.usuario.nombreUsuario}</a>
+            </li>
+            <li>
+              <h:form>
+                <h:commandButton action="#{loginController.logout()}"
+                               value="Cerrar Sesión"/>
+              </h:form>
+            </li>
+          </c:when>
+          <c:otherwise>
+            
+            
+            <h:form class="col s12">
+            <li>
+            <div class="input-field col s6">
+            <h:inputText value="#{loginController.correo}"
+                           required="true" id="Username"
+                           size="15" 
+                           a:placeholder="Correo Electrónico"/>
+            </div>
+            </li>
+            
+
+            <li>
+            <div class="input-field col s6">
+            <h:inputSecret value="#{loginController.contrasenia}"
+                             required="true" id="Password"
+                             
+                             a:placeholder="Contraseña"/>
+            </div>
+            </li>
+
+            <li>
+            <h:commandButton action="#{loginController.canLogin()}"
+                               value="Inicia Sesión"
+                               />
+            </li>
+
+            </h:form>
+          </c:otherwise>
+          </c:choose>
           </ul>
         </div>
       </nav>
