--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/footer.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/footer.xhtml
@@ -1,33 +1,8 @@
-<?xml version = "1.0" encoding = "UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<html xmlns = "http://www.w3.org/1999/xhtml"   
-   xmlns:ui = "http://java.sun.com/jsf/facelets">
-   
-   <body>
-  <footer class="page-footer footer-important">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">PumAsk</h5>
-            <p class="grey-text text-lighten-4">Foro para estudiantes de la <b>Facultad de Ciencias</b> de la <b>UNAM</b>.</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="http://www.unam.mx">UNAM</a></li>
-              <li><a class="grey-text text-lighten-3" href="http://www.fciencias.unam.mx">Facultad de Ciencias</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container">
-        © 2018 Clockwork Programming
-        <a class="grey-text text-lighten-4 right" href="www.unam.mx">UNAM</a>
-        </div>
-      </div>
-    </footer>
-   </body>
-</html>
+  <div class="footer">
+    <p>&#169; Clockwork Programming - Ingeniería de Software 2018-2, Facultad de Ciencias UNAM</p>
+  </div>
+
+</ui:composition>
