--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -1,73 +1,72 @@
-<?xml version = "1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns = "http://www.w3.org/1999/xhtml"   
-   xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
-   
 
+  <!-- Bootstrap core CSS -->
+  <link href="../../../css/bootstrap.min.css" rel="stylesheet"></link>
 
-
-   
-   <body>
-      <ui:composition> 
-        <nav>
-        <div class="nav-wrapper navigation">
-          <a href="#" class="brand-logo">PumAsk</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down"> 
-            
-            
-          <c:choose>
-            <c:when test="#{usuarioBean.logged}">
-            <li>
-            <a class="waves-effect waves-light btn">#{usuarioBean.usuario.nombreUsuario}</a>
-            </li>
-            <li>
-              <h:form>
-                <h:commandButton action="#{loginController.logout()}"
-                               value="Cerrar Sesión"/>
-              </h:form>
+  <!-- Custom styles for this template -->
+  <link href="../../../css/jumbotron.css" rel="stylesheet"></link>
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #e3f2fd;">
+      <a class="navbar-left" href="#">
+          <img src="../../../imagenes/logo.jpg" height="42" width="42" alt="logo"></img>
+      </a>
+    <a class="navbar-brand" href="#">PumAsk</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse">
+      <div class="navbar-nav ml-auto">
+        <c:choose>
+          <c:when test="#{usuarioBean.logged}">
+            <div class="my-2 my-lg-0">
+              <button class="btn btn-primary">
+                <i class="fa fa-sign-in" aria-hidden="true"></i>
+                #{usuarioBean.usuario.nombreUsuario}
+              </button>
+            </div>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opciones</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="mi_perfil.xhtml">Mi Perfil</a>
+                  <a class="dropdown-item" href="ajustes.xhtml">Ajustes</a>
+                  <a class="dropdown-item" >
+                    <div class ="my-2 my-lg-0">
+                      <h:form id="exit">
+                        <h:commandButton action="#{loginController.logout()}"
+                                         value="Salir"
+                                         class="btn btn-outline-success my-2 my-sm-0"/>
+                      </h:form>
+                    </div>
+                  </a>
+                </div>
             </li>
           </c:when>
           <c:otherwise>
-            
-            
-            <h:form class="col s12">
-            <li>
-            <div class="input-field col s6">
-            <h:inputText value="#{loginController.correo}"
+            <h:form id="myForm" class="form-inline my-2 my-lg-0">
+              <h:inputText value="#{loginController.correo}"
                            required="true" id="Username"
-                           size="15" 
+                           size="15" class="form-control mr-sm-2"
                            a:placeholder="Correo Electrónico"/>
-            </div>
-            </li>
-            
 
-            <li>
-            <div class="input-field col s6">
-            <h:inputSecret value="#{loginController.contrasenia}"
+              <h:inputSecret value="#{loginController.contrasenia}"
                              required="true" id="Password"
-                             
+                             class="form-control mr-sm-2"
                              a:placeholder="Contraseña"/>
-            </div>
-            </li>
 
-            <li>
-            <h:commandButton action="#{loginController.canLogin()}"
+              <h:commandButton action="#{loginController.canLogin()}"
                                value="Inicia Sesión"
-                               />
-            </li>
+                               class="btn btn-outline-success my-2 my-sm-0"/>
 
             </h:form>
           </c:otherwise>
-          </c:choose>
-          </ul>
-        </div>
-      </nav>
-      </ui:composition>	
-   </body>
-</html>
+        </c:choose>
+      </div>
+    </div>
+
+  </nav>
+</ui:composition>
