--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/layout.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/layout.xhtml
@@ -1,40 +1,29 @@
-<?xml version = "1.0" encoding = "UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<h:head>
 
-<html xmlns = "http://www.w3.org/1999/xhtml"   
-   xmlns:h = "http://java.sun.com/jsf/html"
-   xmlns:ui = "http://java.sun.com/jsf/facelets"> 
-   
-   <h:head>
-       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></link>
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"></link>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <!-- Estilos personalizados. -->
-      <link rel="stylesheet" href="estilo.css"></link>
-   </h:head>
-   <h:body> 
-      <div>
-         <ui:insert name = "header" >
-            <ui:include src = "./header.xhtml" />
-         </ui:insert> 
-      </div>
-      <br/>
-      
-      <div>
-         <ui:insert name = "content" >
-            <ui:include src = "./content.xhtml" />
-         </ui:insert>    
-      </div>
-      <br/>
-      
-      <div >
-         <ui:insert name = "footer" >
-            <ui:include src = "./footer.xhtml" />
-         </ui:insert>
-      </div>
-   
-   </h:body>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>PumAsk </title>
+
+    <h:outputStylesheet library="webjars" name="bootstrap/4.0.0-2/css/bootstrap.min-jsf.css" />
+
+</h:head>
+<h:body>
+
+    <ui:include src="./header.xhtml" />
+    <div class="container">
+        <ui:include src="./content.xhtml" />
+        <ui:include src="./footer.xhtml" />
+    </div>
+
+    <!-- Los dejamos hasta abajo para que cargue la página más rápido-->
+    <h:outputScript library="webjars" name="jquery/3.3.1-1/jquery.min.js"/>
+    <h:outputScript library="webjars" name="bootstrap/4.0.0-2/js/bootstrap.min.js" />
+
+</h:body>
 </html>
