--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -22,11 +22,11 @@
     <div class="collapse navbar-collapse">
       <div class="navbar-nav ml-auto">
         <c:choose>
-          <c:when test="#{usuarioBean.logged}">
+          <c:when test="#{controladorSesion.estaEnSesion()}">
             <div class="my-2 my-lg-0">
               <button class="btn btn-primary">
                 <i class="fa fa-sign-in" aria-hidden="true"></i>
-                #{usuarioBean.usuario.nombreUsuario}
+                #{controladorSesion.usuario.nombreUsuario}
               </button>
             </div>
             <li class="nav-item dropdown">
@@ -37,7 +37,7 @@
                   <a class="dropdown-item" >
                     <div class ="my-2 my-lg-0">
                       <h:form id="exit">
-                        <h:commandButton action="#{loginController.logout()}"
+                        <h:commandButton action="#{controladorSesion.cerrarSesion()}"
                                          value="Salir"
                                          class="btn btn-outline-success my-2 my-sm-0"/>
                       </h:form>
@@ -48,17 +48,17 @@
           </c:when>
           <c:otherwise>
             <h:form id="myForm" class="form-inline my-2 my-lg-0">
-              <h:inputText value="#{loginController.correo}"
+              <h:inputText value="#{controladorSesion.correo}"
                            required="true" id="Username"
                            size="15" class="form-control mr-sm-2"
                            a:placeholder="Correo Electrónico"/>
 
-              <h:inputSecret value="#{loginController.contrasenia}"
+              <h:inputSecret value="#{controladorSesion.contrasenia}"
                              required="true" id="Password"
                              class="form-control mr-sm-2"
                              a:placeholder="Contraseña"/>
 
-              <h:commandButton action="#{loginController.canLogin()}"
+              <h:commandButton action="#{controladorSesion.iniciarSesion()}"
                                value="Inicia Sesión"
                                class="btn btn-outline-success my-2 my-sm-0"/>
 
