--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -12,10 +12,10 @@
   <link href="../../../css/jumbotron.css" rel="stylesheet"></link>
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #e3f2fd;">
-      <a class="navbar-left" href="#">
-          <img src="../../../imagenes/logo.jpg" height="42" width="42" alt="logo"></img>
+      <a class="navbar-left" href="/pumask/index.xhtml">
+          <img src="#{request.contextPath}/imagenes/logo.jpg" height="42" width="42" alt="logo"></img>
       </a>
-    <a class="navbar-brand" href="#">PumAsk</a>
+    <a class="navbar-brand" href="/pumask/index.xhtml">PumAsk</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
