--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -3,6 +3,7 @@
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
+		        xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
 
@@ -21,29 +22,30 @@
             <c:when test="#{controladorSesion.mostrarBotones()}">
 				<c:choose>
 				  <c:when test="#{controladorSesion.estaEnSesion()}">
+					
 					<div class="my-2 my-lg-0">
-					  <button class="btn btn-primary">
-						<i class="fa fa-sign-in" aria-hidden="true"></i>
-						#{controladorSesion.usuario.nombreUsuario}
-					  </button>
+                        <h:form id="perfil">
+                           <h:commandButton action="#{controladorSesion.miPerfil()}"
+                                            value="#{controladorSesion.usuario.nombreUsuario}"
+                                            class="btn btn-outline-success my-2 my-sm-0"/>
+                        </h:form>
 					</div>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opciones</a>
-						<div class="dropdown-menu" aria-labelledby="dropdown01">
-						  <a class="dropdown-item" href="/pumask/secured/mi_perfil.xhtml">Mi Perfil</a>
-						  <a class="dropdown-item" href="/pumask/secured/ajustes.xhtml">Ajustes</a>
-						  <a class="dropdown-item" >
-							<div class ="my-2 my-lg-0">
-							  <h:form id="exit">
-								<h:commandButton action="#{controladorSesion.cerrarSesion()}"
-												 value="Salir"
-												 class="btn btn-outline-success my-2 my-sm-0"/>
-							  </h:form>
-							</div>
-						  </a>
-						</div>
-					</li>
-				  </c:when>
+                   <div class ="my-2 my-lg-0">
+                        <h:form id="ajustes">
+                           <h:commandButton action="#{controladorSesion.ajustes()}"
+                                            value="Ajustes"
+                                            class="btn btn-outline-success my-2 my-sm-0"/>
+                        </h:form>
+                   </div>
+                   <div class ="my-2 my-lg-0">
+                        <h:form id="salir">
+                           <h:commandButton action="#{controladorSesion.cerrarSesion()}"
+                                            value="Salir"
+                                            class="btn btn-outline-success my-2 my-sm-0"/>
+                        </h:form>
+                   </div>
+					
+			  </c:when>
 				  <c:otherwise>
 					<h:form id="myForm" class="form-inline my-2 my-lg-0">
 					  <h:commandButton action="#{controladorRegistro.formaRegistro()}"
