Cambio agregar pregunta

--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header2.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header2.xhtml
@@ -21,6 +21,12 @@
 		        		<f:facet name="left">
 		        			<p:graphicImage value="/imagenes/logo.jpg" height="30"/>
 		        			<h:outputText value="Pumask" />
+		        			<span class="ui-separator">
+                				<span class="ui-icon ui-icon-grip-dotted-vertical" />
+            				</span>
+            				<p:commandButton action="/index?faces-redirect=true"
+									   value="Inicio"
+									   />
 		        		</f:facet>
 		        		<f:facet name="right">
 		        			
