--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header2.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header2.xhtml
@@ -29,7 +29,8 @@
 									   />
 		        		</f:facet>
 		        		<f:facet name="right">
-		        			
+		        		
+		        		<p:graphicImage value="#{controladorSesion.miFoto}" width="48" height="48"/>
 		        		<p:button value="#{controladorSesion.usuario.nombreUsuario}" disable="true"/>
 		        		<span class="ui-separator">
                 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
