--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -25,6 +25,7 @@
 					
 					<div class="my-2 my-lg-0">
                         <h:form id="perfil">
+                           <p:graphicImage value="#{controladorSesion.miFoto}" width="40" height="40"/>
                            <h:commandButton action="#{controladorSesion.miPerfil()}"
                                             value="#{controladorSesion.usuario.nombreUsuario}"
                                             class="btn btn-outline-success my-2 my-sm-0"/>
